# vocab-project

./: LICENSE
backend/: alembic.ini  chaperone.db  pyproject.toml  requirements.txt  vocab.db
backend/alembic/: env.py
backend/alembic/versions/: ec5187a8d88d_initial_migration.py
backend/app/: Dockerfile  main.py  models.py  prompts.py  schemas.py
backend/app/core/: config.py  database.py  security.py
chrome/: background.js  manifest.json
chrome/content_scripts/: content_scripts.js
create-associations/: Dockerfile  associations.py
create-vocabularies/: Dockerfile  requirements.txt  vocabularies.py
firefox/: background.js  manifest.json
firefox/content_scripts/: content_scripts.js
